# agentdeck

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  NOTICE  README.md  TODO.md  config.example.toml  config.staging.example.toml  pyproject.toml
.claude/codebase/: architecture-runtime.md  deckhand-assistant.md  deployment-testing.md  owned-agent-control.md  providers-sessions.md  (+2 more)
docs/: BUILD_PLAN.md  CODEX_INJECTION_PLAN.md  UX_LATENCY_PLAN.md  WORKER_RUNTIME.md  interactive-questions-spike.md  staging.md
kanban/: README.md  config.json  kanban_poll.sh  poller.py  shot.py  worker_prompt.md
scripts/: install-skills.sh  shot.py  staging-promote.sh  staging-setup.sh
systemd/: agentdeck-codex.service  agentdeck-staging-codex.service  agentdeck-staging.service  agentdeck.service
tests/: conftest.py  test_agy.py  test_assistant.py  test_base_interaction.py  test_chat.py  test_claude_interactions.py  test_claude_new_chat.py  test_claude_worker.py  test_claude_worker_runtime.py  test_cli.py  test_codex.py  test_codex_appserver.py  test_codex_runtime.py  test_codex_tool_display.py  test_codex_usage.py  test_collector.py  test_db.py  test_deckhand.py  test_deckhand_runner.py  test_delivery.py  test_dismissals.py  test_filecache.py  test_git_context.py  test_github_cache.py  test_history.py  test_host_stats.py  test_images.py  test_inject.py  test_kanban.py  test_kanban_poller.py  test_models.py  test_push.py  test_registry.py  test_render.py  test_restart.py  test_state.py  test_titles.py  test_transcript_reader.py  test_transcripts.py  test_triage.py  (+3 more)
(+129 files in other folders)
