[project]
name = "agentdeck"
version = "0.3.1"
description = "Self-hosted, mobile-first dashboard for monitoring and steering coding-agent CLI sessions"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Eero Vilpponen" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "watchfiles>=0.22",
    "pydantic-settings>=2",
    "python-multipart",
    "pywebpush>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/eerovil/agentdeck"

[project.scripts]
agentdeck = "agentdeck.__main__:main"

[dependency-groups]
dev = [
    "playwright>=1.61.0",
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdeck"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
